# supershooter

./: .gitignore  CMakeLists.txt  PKGBUILD  README  README.markdown  blocks.desktop  blocks.xpm  collision.cpp  collision.h  config.dtd  config.xml  dummy.cpp  engine.cpp  engine.h  except.cpp  except.h  main.cpp  main.cpp.template  message.cpp  message.h  shoot.cpp  shoot.h  sound.cpp  sound.h  sprite.cpp  sprite.h  supershooter.desktop  supershooter.xpm  utils.cpp  utils.h  zizicollision.cpp  zizidemo.cpp
blocks/: CMakeLists.txt  boardblocks.cpp  boardblocks.h  main.cpp  uct.cpp
data/: mass_convert.sh
supershooter/: .shoot.cpp.swp  CMakeLists.txt  main.cpp  shoot.cpp  shoot.h
tests/: CMakeLists.txt  transparent.cpp  zizicollision.cpp  zizidemo.cpp  zizigui.cpp
tinyxml/: CMakeLists.txt
truckfight/: CMakeLists.txt  main.cpp
xcf/: bigship.xcf  blocks_background.xcf  check.xcf  map.xcf  map_collide.xcf  onoff-2.xcf  pickup.xcf  road.xcf  ship01.xcf  slider.xcf  title.xcf
zizi/: CMakeLists.txt  collision.cpp  collision.h  engine.cpp  engine.h  except.cpp  except.h  gui.cpp  gui.h  message.cpp  message.h  sound.cpp  sound.h  sprite.cpp  sprite.h  utils.cpp  utils.h
zombies/: CMakeLists.txt  main.cpp  png.cpp  png.h
